# pictor

./: .gitignore  README.md  pyproject.toml  test_generate.py  test_ipa_compare.py  test_ipadapter.py
output/: .gitignore
pictor/: __init__.py  cli.py  comfy_client.py  prompts.py  workflows.py
workflows/: flux-dev.json  sd15.json  sdxl-ipadapter.json  sdxl.json
